[package]
name = "ccsds_primary_header"
version = "0.1.0"
authors = ["nsmryan <nsmryan@gmail.com>"]
readme="README.md"
keywords=["serde", "bytse", "parser", "ccsds"]
categories=["parsing", "protocols"]
license="BSD-3-Clause"
homepage="https://github.com/nsmryan/ccsds_primary_header"
description="Implementation of the CCSDS Primary Header for space applications"

[dependencies]
byteorder="1.2.6"

[dev-dependencies]
quickcheck = "0.6"
rand = "0.4.2"

