[package]
name = "ccsds_primary_header"
version = "0.10.2"
authors = ["nsmryan <nsmryan@gmail.com>"]
readme="README.md"
keywords=["serde", "bytes", "parser", "ccsds"]
categories=["parsing", "network-programming"]
documentation="https://docs.rs/ccsds_primary_header"
license="BSD-3-Clause"
homepage="https://github.com/nsmryan/ccsds_primary_header"
description="Implementation of the CCSDS Primary Header for space applications"

[dependencies]
byteorder="1.2.6"
quickcheck = "0.6"
rand = "0.4.2"
bytes = "0.4"

