[package]
name = "ccsds_primary_header"
version = "0.15.0"
authors = ["nsmryan <nsmryan@gmail.com>"]
readme="README.md"
keywords=["bytes", "parser", "ccsds"]
categories=["parsing", "network-programming"]
documentation="https://docs.rs/ccsds_primary_header"
license="MIT"
homepage="https://github.com/nsmryan/ccsds_primary_header"
description="Implementation of the CCSDS Primary Header for space applications"
repository="https://github.com/nsmryan/ccsds_primary_header"

[dependencies]
byteorder = { version = "1.2.6", default-features = false }
bytes = { version = "0.4", default-features = false }

[dev-dependencies]
quickcheck = { version = "0.7" }
rand = { version = "0.4.2" }

